# LogSimGUI

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
native/: Cargo.toml
native/src/: files.rs  main.rs  persist.rs
releases/: CHANGELOG.md  logic-sim-gui-220922-1410  logic-sim-gui-220923-1856  logic-sim-gui-220929  logic-sim-gui-221001-1313
releases/221001/: LogSimGUI-221001-mac
src/: app.rs  board.rs  debug.rs  dev.rs  graphics.rs  input.rs  integration.rs  lib.rs  main.rs  old_data.rs  preset.rs  preset_placer.rs  presets.rs  scene.rs  settings.rs  sim.rs  ui.rs
src/preset/: chip.rs
src/presets/: chip.rs
src/scene/: chip.rs
web/: Cargo.toml  build.bat  build.sh
web/site/: index.html  log_sim_gui_web.js  log_sim_gui_web_bg.wasm  logsim_web.js  logsim_web_bg.wasm
web/src/: lib.rs
