[package]
name = "logic-sim-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1", features = ["serde_derive"] }
ron = "0.8"
bincode = "1.3.3"

fastrand = "1.8.0"
hashbrown = { version = "0.13.1", features = ["serde"] }

dirs = "4.0"
rfd = "0.10"

eframe = { git = "https://github.com/emilk/egui.git" }
epaint = { git = "https://github.com/emilk/egui.git", features = ["serde"] }
