[package]
name = "log-sim-gui"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
serde = { version = "^1", features = ["serde_derive"] }

getrandom = "^0.2.8"
tinyrand = "0.5"
hashbrown = { version = "0.13.1", features = ["serde"] }

egui = { git = "https://github.com/emilk/egui.git" }
epaint = { git = "https://github.com/emilk/egui.git", features = ["serde"] }
