[package]
name = "log-sim-gui-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rfd = "0.10"
bincode = "1.3.3"

web-sys = "^0.3"
tracing-wasm = "0.2.0"
wasm-bindgen-futures = "^0.4"
console_error_panic_hook = "0.1.7"

log-sim-gui = { path = ".." }
eframe = { git = "https://github.com/emilk/egui.git" }
serde = { version = "^1", features = ["serde_derive"] }
getrandom = { version = "^0.2.8", features = ["js"] }
